# evmdeploy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
contracts/: MyToken.sol  Vault.sol
contracts/lib/: SafeMath.sol
evmdeploy/: __init__.py  contract.py  exceptions.py
evmdeploy/artifacts/: __init__.py  model.py  storage.py
evmdeploy/compiler/: linker.py  solidity.py
evmdeploy/crypto/: signer.py
evmdeploy/deployer/: __init__.py  deployer.py  gas.py
evmdeploy/encoding/: constructor.py
evmdeploy/evmdeploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
evmdeploy/network/: __init__.py  evm.py
evmdeploy/utils/: __init__.py  hashing.py
examples/: deploy.py  improved_deploy.py  oz_erc20_deploy.py  simple_deploy.py  test_integration.py
