[project]
name = "evmdeploy"
version = "0.1.0"
description = "Minimal Python library for compiling and deploying Solidity contracts on EVM chains"
authors = [{ name="Rakib Hossain" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "web3>=7.14.0",
  "py-solc-x==2.0.5",
  "eth-abi",
  "eth-utils"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
