[build-system]
requires = ["setuptools >= 75.0", "wheel >= 0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "evmdeploy"
version = "0.1.0.1"
description = "Minimal Python library to compile Solidity contracts and deploy them to EVM-compatible chains"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "Rakib Hossain", email = "rakib4ggp@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ethereum", "evm", "solidity", "deployment", "web3", "blockchain"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

dependencies = [
    "web3 >= 7.14.0",           # latest stable as of late 2025
    "py-solc-x >= 2.0.5",       # still current — no major newer version widely used yet
    "eth-abi >= 5.2.0",         # modern range — eth-abi 4.x is very old now
    "eth-utils >= 5.3.1",       # same — avoid very old versions
]

[project.urls]
Homepage = "https://github.com/rakibhossain72/evmdeploy"
Repository = "https://github.com/rakibhossain72/evmdeploy.git"
Issues = "https://github.com/rakibhossain72/evmdeploy/issues"

[project.scripts]
evmdeploy = "evmdeploy.cli.main:main"


[tool.setuptools]
packages = ["evmdeploy"]